--- a/src/app/components/pages/edit-profile/edit-profile.component.html
+++ b/src/app/components/pages/edit-profile/edit-profile.component.html
@@ -4,14 +4,14 @@
     <div class="col-lg-4 col-xl-4 col-md-12 col-sm-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title">Edit Password</div>
+                <div class="card-title">Edit Password xx</div>
             </div>
             <div class="card-body">
                 <div class="d-flex mb-3">
                     <img alt="User Avatar" class="rounded-circle avatar-lg me-2" src="../../assets/images/users/8.jpg">
                     <div class="ms-auto mt-xl-2 mt-lg-0 me-lg-2">
                         <a href="editprofile.html" class="btn btn-primary btn-sm mt-1 mb-1 me-1"><i
-                                class="fe fe-camera me-1"></i>Edit profile</a>
+                                class="fe fe-camera me-1"></i>Edit profile xxx</a>
                         <a href="javascript:;" class="btn btn-danger btn-sm mt-1 mb-1"><i class="fe fe-camera-off me-1"></i>Delete
                             profile</a>
                     </div>
@@ -58,7 +58,7 @@
     <div class="col-lg-8 col-xl-8 col-md-12 col-sm-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Edit Profile</h3>
+                <h3 class="card-title">Edit Profile  xx</h3>
             </div>
             <div class="card-body">
                 <div class="row">
