se guarda en el local storage y se registran user

--- a/src/app/components/configuraciones/customer-manager/customer-manager.component.html
+++ b/src/app/components/configuraciones/customer-manager/customer-manager.component.html
@@ -109,7 +109,7 @@
                             
                             <td>
                                 <a class="btn btn-sm btn-primary me-2" [routerLink]="['/configuraciones/editar-cliente']"><i class="fa fa-edit"></i> Edit</a>
-                                <a class="btn btn-sm btn-danger" href="javascript:;"><i class="fa fa-trash"></i> Delete</a>
+                                <a class="btn btn-sm btn-danger" (click)="sweeAlerTes()"><i class="fa fa-trash"></i> Delete</a>
                             </td>
                             <td><a class="btn btn-sm btn-secondary" href="javascript:;"><i class="fa fa-info-circle"></i>
                                     Details</a> </td>
