--- a/src/app/components/pages/mail-inbox/mail-inbox.component.html
+++ b/src/app/components/pages/mail-inbox/mail-inbox.component.html
@@ -110,7 +110,7 @@
                                         <label class="custom-control custom-checkbox mb-0">
                                             <input type="checkbox" class="custom-control-input" name="example-checkbox2"
                                                 value="option2">
-                                            <span class="custom-control-label"></span>
+                                            <span class="custom-control-label">HOLA</span>
                                         </label>
                                     </td>
                                     <td class="inbox-small-cells"><i class="fa fa-star text-warning"></i></td>
