--- a/src/app/authentication/login-page/login-page.component.html
+++ b/src/app/authentication/login-page/login-page.component.html
@@ -18,41 +18,68 @@
                             
 						<div class="wrap-login100 p-0">
 							<div class="card-body">
-                                <form (ngSubmit)="login()" class="login100-form validate-form">
+                                <form (ngSubmit)="login()" 
+                                class="login100-form validate-form"
+                                [formGroup]="loginForm">
                                     
                                     <span class="login100-form-title">
-                                        Firebase Login
+                                        Login
                                     </span>
                             
                                     
                                     <div class="wrap-input100 validate-input">
-                                        <input type="email" name="email" class="form-control input100" [(ngModel)]="email" placeholder="Enter email Id" required>
+                                        <input type="email"
+                                        autocomplete="off" 
+                                        name="email" 
+                                        class="form-control input100" 
+                                        placeholder="Ingrese el email"
+                                        formControlName="email">
+                                        <!-- [(ngModel)]="email"  -->
+
                                         <span class="focus-input100"></span>
                                         <span class="symbol-input100">
                                             <i class="zmdi zmdi-email" aria-hidden="true"></i>
                                         </span>
                                     </div>
                                     <div class="wrap-input100 validate-input">
-                                        <input type="password" name="password" class="form-control input100" [(ngModel)]="password" placeholder="Enter Password" re
-                                        quired>
+                                        <!-- [(ngModel)]="password" -->
+                                        <input type="password" 
+                                        name="password" 
+                                        autocomplete="off"
+                                        class="form-control input100"  
+                                        placeholder="Ingrese el password" 
+                                        formControlName="password">
+
                                         <span class="focus-input100"></span>
                                         <span class="symbol-input100">
                                             <i class="zmdi zmdi-lock" aria-hidden="true"></i>
                                         </span>
                                     </div>
-                                    
+
+                                   
                                     <div class="text-end pt-1">
                                         <p class="mb-0"><a routerLink="/custom-pages/forget-password" class="text-primary ms-1">Forgot Password?</a></p>
                                     </div>
                                     <div class="container-login100-form-btn">
                                         <button type="submit" class="login100-form-btn btn-primary"> Login</button>
                                     </div>
+
+                                    <label class="custom-control custom-checkbox mb-0">
+                                        <input type="checkbox" class="custom-control-input" name="example-checkbox2"
+                                            value="option2"
+                                            formControlName="remember">
+                                        <span class="custom-control-label">Remember me</span>
+                                    </label>
+                              
                                     <div class="form-group">
-                                    <p *ngIf="errorMessage.length > 0" class="text-danger">
-                                        {{errorMessage}}</p>
+                                    <p *ngIf="invalidField('userName')" class="text-danger">
+                                        *El email no es valido</p>
+
+                                        <p *ngIf="invalidField('password')" class="text-danger">
+                                            *Introduzca su password</p>
                                     
-                                    <p *ngIf="_error.message.length > 0" class="text-danger">
-                                        {{_error.message}} </p>
+                                    <!-- <p *ngIf="_error.message.length > 0" class="text-danger">
+                                        {{_error.message}} </p> -->
                                     </div>
                                     <div class="text-center pt-3">
                                         <p class="text-dark mb-0">Not a member?<a routerLink="/auth/register" class="text-primary ms-1">Sign UP now</a></p>
