--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -10,42 +10,99 @@
             <div class="container-login100">
                 <div class="wrap-login100 p-0">
                     <div class="card-body">
-                        <form (ngSubmit)="register()" class="login100-form validate-form">
+
+                        <!-- Formulario de registro -->
+
+                        <form class="login100-form validate-form" 
+                        (ngSubmit)="createUser()"
+                         autocomplete="off"
+                         [formGroup]="registerForm">                       
+                        
                             <span class="login100-form-title">
                                 Registration
                             </span>
                             <div class="wrap-input100 validate-input">
-                                <input type="text" name="name" class="form-control input100" placeholder="User name"
-                                    required>
+                                <input type="text"                   
+                                class="form-control input100" 
+                                placeholder="Nombre"
+                                formControlName="name">
                                 <span class="focus-input100"></span>
                                 <span class="symbol-input100">
                                     <i class="mdi mdi-account" aria-hidden="true"></i>
                                 </span>
                             </div>
+
                             <div class="wrap-input100 validate-input">
-                                <input type="email" name="email" class="form-control input100" [(ngModel)]="email"
-                                    placeholder="Enter email Id" required>
+                                <input type="text"                   
+                                class="form-control input100" 
+                                placeholder="Apellido"
+                                formControlName="lastName">
+                                <span class="focus-input100"></span>
+                                <span class="symbol-input100">
+                                    <i class="mdi mdi-account" aria-hidden="true"></i>
+                                </span>
+                            </div>
+
+                            <div class="wrap-input100 validate-input">
+                                <input type="text"                   
+                                class="form-control input100" 
+                                placeholder="Usuario"
+                                formControlName="userName">
+                                <span class="focus-input100"></span>
+                                <span class="symbol-input100">
+                                    <i class="mdi mdi-account" aria-hidden="true"></i>
+                                </span>
+                            </div>
+
+                            <div class="wrap-input100 validate-input">
+                                <input type="email"                         
+                                class="form-control input100"                              
+                                placeholder="Enter email Id" 
+                                formControlName="email">
                                 <span class="focus-input100"></span>
                                 <span class="symbol-input100">
                                     <i class="zmdi zmdi-email" aria-hidden="true"></i>
                                 </span>
                             </div>
+
                             <div class="wrap-input100 validate-input">
-                                <input type="password" name="password" class="form-control input100"
-                                    [(ngModel)]="password" placeholder="Enter Password" required>
+                                <input type="password"                           
+                                class="form-control input100"
+                                placeholder="Enter Password" 
+                                formControlName="password">
                                 <span class="focus-input100"></span>
                                 <span class="symbol-input100">
                                     <i class="zmdi zmdi-lock" aria-hidden="true"></i>
                                 </span>
                             </div>
-                            <label class="custom-control custom-checkbox mt-4">
+
+                            <div class="wrap-input100 validate-input">
+                                <input type="password"                               
+                                class="form-control input100"
+                                placeholder="Enter Password" 
+                                formControlName="confirmPassword">
+                                <span class="focus-input100"></span>
+                                <span class="symbol-input100">
+                                    <i class="zmdi zmdi-lock" aria-hidden="true"></i>
+                                </span>
+                            </div>
+
+                            <!-- <label class="custom-control custom-checkbox mt-4">
                                 <input type="checkbox" class="custom-control-input">
                                 <span class="custom-control-label">Agree the <a routerLink="/pages/terms">terms and
                                         policy</a></span>
-                            </label>
+                            </label> -->
                             <div class="form-group">
-                                <p *ngIf="errorMessage.length > 0" class="text-danger">
+                                <p *ngIf="invalidField('name')" class="text-danger">*
                                     {{errorMessage}}</p>
+
+                                    <p *ngIf="invalidField('email')" class="text-danger">*
+                                        {{errorEmail}}</p>
+                                        <p *ngIf="passwordsAreNotTheSame()" class="text-danger">* {{errorPasswordsAreNotTheSame}}</p>
+                                        <p *ngIf="invalidField('lastName')" class="text-danger">*{{ errorLastName }}</p>
+                                        <p *ngIf="invalidField('userName')" class="text-danger">*{{errorUserName}}</p>                                     
+                                        <!-- <p *ngIf="" class="text-danger">* {{errorPasswordsAreNotTheSame}}</p> -->
+                                                                              
 
                                 <p *ngIf="error.message.length > 0" class="text-danger">
                                     {{error.message}} </p>
@@ -54,17 +111,17 @@
                                     {{message}} </p>
                             </div>
                             <div class="container-login100-form-btn">
-                                <button type="submit" class="login100-form-btn btn-primary">Register</button>
+                                <button type="submit" class="login100-form-btn btn-primary">Registrar</button>
                             </div>
 
                             <div class="text-center pt-3">
-                                <p class="text-dark mb-0">Already have account?<a routerLink="/auth/login"
-                                        class="text-primary ms-1">Sign In</a></p>
+                                <p class="text-dark mb-0">¿Tines una cuenta?<a routerLink="/auth/login"
+                                        class="text-primary ms-1">Autenticate</a></p>
                             </div>
                         </form>
                     </div>
                     <div class="card-footer">
-                        <div class="d-flex justify-content-center my-3">
+                        <!-- <div class="d-flex justify-content-center my-3">
                             <a href="javascript:;" class="social-login  text-center me-4">
                                 <i class="fa fa-google"></i>
                             </a>
@@ -74,7 +131,7 @@
                             <a href="javascript:;" class="social-login  text-center">
                                 <i class="fa fa-twitter"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
