proceso de autenticacion

--- a/src/app/authentication/login-page/login-page.component.html
+++ b/src/app/authentication/login-page/login-page.component.html
@@ -72,7 +72,7 @@
                                     </label>
                               
                                     <div class="form-group">
-                                    <p *ngIf="invalidField('userName')" class="text-danger">
+                                    <p *ngIf="invalidField('email')" class="text-danger">
                                         *El email no es valido</p>
 
                                         <p *ngIf="invalidField('password')" class="text-danger">
