se agrego como obtener fecha

--- a/src/app/components/configuraciones/customer-manager/customer-manager.component.html
+++ b/src/app/components/configuraciones/customer-manager/customer-manager.component.html
@@ -12,6 +12,12 @@
                         data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>Añadir nuevo cliente</button>
                 </div>
             </div>
+            <div class="card">         
+                <input type="date" value={{_dateSelected}}  id="fecha">
+              
+                <h2>{{_dateSelected}}</h2>
+            </div>
+            
             <div class="table-responsive">
                 <table class="table table-hover card-table table-striped table-vcenter table-outline text-nowrap">
                     <thead>
